[package]
name = "proxy_tide"
version = "0.1.0"
authors = ["Raymond Yeh <extraymond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.6.0"
async-std = { version = "1.5.0", features = ["unstable", "attributes"]}
mime = "0.3.16"
tokio = { version = "0.2.11", features = ["full"] }
hyper = "0.13.2"
